seed operation was performed

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
   "homepage": "https://github.com/wolfan00/NeVarMarket#readme",
   "devDependencies": {
     "nodemon": "^3.1.9",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "sequelize": "^6.37.5"
   }
 }
