--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Market App",
   "main": "app.js",
   "scripts": {
-    "test": "node app"
+    "server:start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,11 @@
     "sequelize-cli": "^6.6.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
   }
